Update: Added verification requirement for secondary email address
- Added 'enraiged.auth.must_verify_secondary' config option
- Added 'enraiged.auth.reject_unverified_secondary' config option
- Added mail.auth templates for secondary address notifications
- Removed accidental duplicate views from the publish directory
- Updated language files as necessary

--- a/publish/lang/es.json
+++ b/publish/lang/es.json
@@ -1,5 +1,7 @@
 {
     "A new verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a su dirección de correo electrónico.",
+    "A recent attempt to log in with your secondary email address has failed.": "Un intento reciente de iniciar sesión con su dirección de correo electrónico secundaria ha fallado.",
+    "A verification link has been sent to your secondary email address.": "Se ha enviado un enlace de verificación a su dirección de correo electrónico secundaria.",
     "An email has been sent to your address.": "Se ha enviado un correo electrónico a su dirección.",
     "Are you sure you want to delete your account?": "¿Estás seguro de que quieres eliminar tu cuenta?",
     "Cancel": "Cancelar",
@@ -23,10 +25,12 @@
     "French": "Francesa",
     "Full Name": "Nombre completo",
     "Hello :name": "Hola :name",
+    "If this update is unexpected, please take immediate action to protect your account by changing your password.": "Si esta actualización es inesperada, tome medidas inmediatas para proteger su cuenta cambiando su contraseña.",
     "If you did not create an account, no further action is required.": "Si no ha creado una cuenta, no es necesario realizar ninguna otra acción.",
     "If you did not request a password reset, no further action is required.": "Si no solicitó un restablecimiento de contraseña, no se requiere ninguna otra acción.",
     "Language": "Idioma",
     "Login": "Acceso",
+    "Login Change": "Cambiar de inicio de sesión",
     "Logout": "Cerrar sesión",
     "Name": "Nombre",
     "New Password": "Nueva contraseña",
@@ -36,6 +40,8 @@
     "Please be sure to download any data or information that you wish to retain.": "Asegúrese de descargar cualquier dato o información que desee conservar.",
     "Please check your inbox for a verification email and follow the provided instructions.": "Revise su bandeja de entrada para recibir un correo electrónico de verificación y siga las instrucciones proporcionadas.",
     "Please click the button below to verify your email address.": "Haga clic en el botón a continuación para verificar su dirección de correo electrónico.",
+    "Please click the button below to verify your secondary email address.": "Haga clic en el botón a continuación para verificar su dirección de correo electrónico secundaria.",
+    "Please log in with your primary email address and navigate to your profile to send a new verification email.": "Inicie sesión con su dirección de correo electrónico principal y navegue a su perfil para enviar un nuevo correo electrónico de verificación.",
     "Please provide your password to confirm you would like to permanently delete your account.": "Proporcione su contraseña para confirmar que desea eliminar permanentemente su cuenta.",
     "Previous": "Previo",
     "Primary Email": "Correo electrónico principal",
@@ -58,16 +64,23 @@
     "Submit": "Entregar",
     "Success": "Tener éxito",
     "The primary and secondary email addresses must be different.": "Las direcciones de correo electrónico principal y secundaria deben ser diferentes.",
+    "There have been changes to your account login.": "Se han producido cambios en el inicio de sesión de su cuenta.",
     "This action cannot be undone.": "Esta acción no se puede deshacer.",
+    "This email address must be validated before a log in will succeed.": "Esta dirección de correo electrónico debe ser validada para poder iniciar sesión correctamente.",
     "This is a secure area of the application. Please confirm your password before continuing.": "Esta es una zona segura de la aplicación. Confirme su contraseña antes de continuar.",
     "This password reset link will expire in :count minutes.": "Este enlace de restablecimiento de contraseña caducará en :count minutos.",
+    "Unauthorized": "No autorizado",
     "Update Password": "Actualizar contraseña",
     "Update your account's profile information and email address.": "Actualice la información del perfil y la dirección de correo electrónico de su cuenta.",
     "Verify Email Address": "Verificar dirección de correo electrónico",
+    "Verify Secondary Email Address": "Verificar dirección de correo electrónico secundaria",
     "View My Dashboard": "Ver mi panel",
     "Warning!": "¡Advertencia!",
     "Welcome!": "¡Bienvenida!",
     "Welcome to :app!": "¡Bienvenido a :app!",
     "You are receiving this email because we received a password reset request for your account.": "Recibirá este correo electrónico porque recibimos una solicitud de restablecimiento de contraseña para su cuenta.",
-    "Your email address is unverified.": "Su dirección de correo electrónico no está verificada."
+    "Your email address has been verified!": "¡Tu dirección de correo electrónico ha sido verificada!",
+    "Your email address is unverified.": "Su dirección de correo electrónico no está verificada.",
+    "Your secondary email address has been verified.": "Su dirección de correo electrónico secundaria ha sido verificada.",
+    "Your secondary email address is unverified.": "Su dirección de correo electrónico secundaria no está verificada."
 }
