--- a/publish/lang/en.json
+++ b/publish/lang/en.json
@@ -1,5 +1,7 @@
 {
     "A new verification link has been sent to your email address.": "A new verification link has been sent to your email address.",
+    "A recent attempt to log in with your secondary email address has failed.": "A recent attempt to log in with your secondary email address has failed.",
+    "A verification link has been sent to your secondary email address.": "A verification link has been sent to your secondary email address.",
     "An email has been sent to your address.": "An email has been sent to your address.",
     "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
     "Cancel": "Cancel",
@@ -23,10 +25,12 @@
     "French": "French",
     "Full Name": "Full Name",
     "Hello :name": "Hello :name",
+    "If this update is unexpected, please take immediate action to protect your account by changing your password.": "If this update is unexpected, please take immediate action to protect your account by changing your password.",
     "If you did not create an account, no further action is required.": "If you did not create an account, no further action is required.",
     "If you did not request a password reset, no further action is required.": "If you did not request a password reset, no further action is required.",
     "Language": "Language",
     "Login": "Login",
+    "Login Change": "Login Change",
     "Logout": "Logout",
     "Name": "Name",
     "New Password": "New Password",
@@ -36,6 +40,8 @@
     "Please be sure to download any data or information that you wish to retain.": "Please be sure to download any data or information that you wish to retain.",
     "Please check your inbox for a verification email and follow the provided instructions.": "Please check your inbox for a verification email and follow the provided instructions.",
     "Please click the button below to verify your email address.": "Please click the button below to verify your email address.",
+    "Please click the button below to verify your secondary email address.": "Please click the button below to verify your secondary email address.",
+    "Please log in with your primary email address and navigate to your profile to send a new verification email.": "Please log in with your primary email address and navigate to your profile to send a new verification email.",
     "Please provide your password to confirm you would like to permanently delete your account.": "Please provide your password to confirm you would like to permanently delete your account.",
     "Previous": "Previous",
     "Primary Email": "Primary Email",
@@ -58,16 +64,23 @@
     "Submit": "Submit",
     "Success": "Success",
     "The primary and secondary email addresses must be different.": "The primary and secondary email addresses must be different.",
+    "There have been changes to your account login.": "There have been changes to your account login.",
     "This action cannot be undone.": "This action cannot be undone.",
+    "This email address must be validated before a log in will succeed.": "This email address must be validated before a log in will succeed.",
     "This is a secure area of the application. Please confirm your password before continuing.": "This is a secure area of the application. Please confirm your password before continuing.",
     "This password reset link will expire in :count minutes.": "This password reset link will expire in :count minutes.",
+    "Unauthorized": "Unauthorized",
     "Update Password": "Update Password",
     "Update your account's profile information and email address.": "Update your account's profile information and email address.",
     "Verify Email Address": "Verify Email Address",
+    "Verify Secondary Email Address": "Verify Secondary Email Address",
     "View My Dashboard": "View My Dashboard",
     "Warning!": "Warning!",
     "Welcome!": "Welcome!",
     "Welcome to :app!": "Welcome to :app!",
     "You are receiving this email because we received a password reset request for your account.": "You are receiving this email because we received a password reset request for your account.",
-    "Your email address is unverified.": "Your email address is unverified."
+    "Your email address has been verified!": "Your email address has been verified!",
+    "Your email address is unverified.": "Your email address is unverified.",
+    "Your secondary email address has been verified.": "Your secondary email address has been verified.",
+    "Your secondary email address is unverified.": "Your secondary email address is unverified."
 }
