--- a/publish/lang/fr.json
+++ b/publish/lang/fr.json
@@ -1,5 +1,7 @@
 {
     "A new verification link has been sent to your email address.": "Un nouveau lien de vérification a été envoyé à votre adresse e-mail.",
+    "A recent attempt to log in with your secondary email address has failed.": "Une tentative récente de connexion avec votre adresse e-mail secondaire a échoué.",
+    "A verification link has been sent to your secondary email address.": "Un lien de vérification a été envoyé à votre adresse e-mail secondaire.",
     "An email has been sent to your address.": "Vous avez envoyé un courrier électronique à votre adresse.",
     "Are you sure you want to delete your account?": "Etes-vous sûr de vouloir supprimer votre compte ?",
     "Cancel": "Annuler",
@@ -23,10 +25,12 @@
     "French": "Français",
     "Full Name": "Nom et prénom",
     "Hello :name": "Bonjour :name",
+    "If this update is unexpected, please take immediate action to protect your account by changing your password.": "Si cette mise à jour est inattendue, veuillez prendre des mesures immédiates pour protéger votre compte en modifiant votre mot de passe.",
     "If you did not create an account, no further action is required.": "Si vous n'avez pas créé de compte, aucune autre action n'est requise.",
     "If you did not request a password reset, no further action is required.": "Si vous n’avez pas demandé de réinitialisation de mot de passe, aucune autre action n’est requise.",
     "Language": "Langue",
     "Login": "Connexion",
+    "Login Change": "Changement de connexion",
     "Logout": "Déconnexion",
     "Name": "Nom",
     "New Password": "Nouveau mot de passe",
@@ -36,6 +40,8 @@
     "Please be sure to download any data or information that you wish to retain.": "Assurez-vous de télécharger toutes les données ou informations que vous souhaitez conserver.",
     "Please check your inbox for a verification email and follow the provided instructions.": "Veuillez vérifier votre boîte de réception pour un e-mail de vérification et suivez les instructions fournies.",
     "Please click the button below to verify your email address.": "Veuillez cliquer sur le bouton ci-dessous pour vérifier votre adresse e-mail.",
+    "Please click the button below to verify your secondary email address.": "Veuillez cliquer sur le bouton ci-dessous pour vérifier votre adresse e-mail secondaire.",
+    "Please log in with your primary email address and navigate to your profile to send a new verification email.": "Veuillez vous connecter avec votre adresse e-mail principale et accéder à votre profil pour envoyer un nouvel e-mail de vérification.",
     "Please provide your password to confirm you would like to permanently delete your account.": "Veuillez fournir votre mot de passe pour confirmer que vous souhaitez supprimer définitivement votre compte.",
     "Previous": "Précédente",
     "Primary Email": "E-mail principal",
@@ -58,16 +64,23 @@
     "Submit": "Soumettre",
     "Success": "Succès",
     "The primary and secondary email addresses must be different.": "Les adresses e-mail principale et secondaire doivent être différentes.",
+    "There have been changes to your account login.": "Des modifications ont été apportées à la connexion à votre compte.",
     "This action cannot be undone.": "Cette action ne peut pas être annulée.",
+    "This email address must be validated before a log in will succeed.": "Cette adresse e-mail doit être validée avant qu'une connexion réussisse.",
     "This is a secure area of the application. Please confirm your password before continuing.": "Il s'agit d'une zone sécurisée de l'application. Veuillez confirmer votre mot de passe avant de continuer.",
     "This password reset link will expire in :count minutes.": "Ce lien de réinitialisation de mot de passe expirera dans :count minutes.",
+    "Unauthorized": "Unauthorized",
     "Update Password": "Mettre à jour le mot de passe",
     "Update your account's profile information and email address.": "Mettez à jour les informations de profil et l'adresse e-mail de votre compte.",
     "Verify Email Address": "Vérifier l'adresse e-mail",
+    "Verify Secondary Email Address": "Vérifier l'adresse e-mail secondaire",
     "View My Dashboard": "Afficher mon tableau de bord",
     "Warning!": "Avertissement!",
     "Welcome!": "Bienvenue!",
     "Welcome to :app!": "Bienvenue sur :app!",
     "You are receiving this email because we received a password reset request for your account.": "Vous recevez cet e-mail car nous avons reçu une demande de réinitialisation de mot de passe pour votre compte.",
-    "Your email address is unverified.": "Votre adresse email n'est pas vérifiée."
+    "Your email address has been verified!": "Votre adresse email a été vérifiée !",
+    "Your email address is unverified.": "Votre adresse email n'est pas vérifiée.",
+    "Your secondary email address has been verified.": "Votre adresse e-mail secondaire a été vérifiée.",
+    "Your secondary email address is unverified.": "Votre adresse e-mail secondaire n'est pas vérifiée."
 }
