Update: Added core structure for ip address tracking, notifications
- Added Enraiged\NetworkAddresses namespace
  - Added Enraiged\NetworkAddresses\Events\LoginAddress event
  - Added Enraiged\NetworkAddresses\Models\IpAddress model
- Added Enraiged\Users\Listeners\LoginAddressListener
  - Updated UserServiceProvider
- Added Enraiged\Users\Notifications\LoginAddressNotification
- Added User::notificationChannels method to return default channels
    - Updated all notifications to call User::notificationChannels()
- Updated User model; Added relation to IpAddress
- Updated publish directory with current auth,users systems

--- a/publish/lang/en.json
+++ b/publish/lang/en.json
@@ -25,6 +25,7 @@
     "French": "French",
     "Full Name": "Full Name",
     "Hello :name": "Hello :name",
+    "If this login is unexpected, please take immediate action to protect your account by changing your password.": "",
     "If this update is unexpected, please take immediate action to protect your account by changing your password.": "If this update is unexpected, please take immediate action to protect your account by changing your password.",
     "If you did not create an account, no further action is required.": "If you did not create an account, no further action is required.",
     "If you did not request a password reset, no further action is required.": "If you did not request a password reset, no further action is required.",
@@ -33,6 +34,7 @@
     "Login Change": "Login Change",
     "Logout": "Logout",
     "Name": "Name",
+    "New Device Login": "New Device Login",
     "New Password": "New Password",
     "Next": "Next",
     "Optional": "Optional",
@@ -63,7 +65,10 @@
     "Stopped impersonating.": "Stopped impersonating.",
     "Submit": "Submit",
     "Success": "Success",
+    "The ip address is: :address": "The ip address is: :address",
+    "The login credential is: :credential": "The login credential is: :credential",
     "The primary and secondary email addresses must be different.": "The primary and secondary email addresses must be different.",
+    "There has just been a login to your account from a new device or ip address.": "There has just been a login to your account from a new device or ip address.",
     "There have been changes to your account login.": "There have been changes to your account login.",
     "This action cannot be undone.": "This action cannot be undone.",
     "This email address must be validated before a log in will succeed.": "This email address must be validated before a log in will succeed.",
