--- a/publish/lang/es.json
+++ b/publish/lang/es.json
@@ -25,6 +25,7 @@
     "French": "Francesa",
     "Full Name": "Nombre completo",
     "Hello :name": "Hola :name",
+    "If this login is unexpected, please take immediate action to protect your account by changing your password.": "Si este inicio de sesión es inesperado, tome medidas inmediatas para proteger su cuenta cambiando su contraseña.",
     "If this update is unexpected, please take immediate action to protect your account by changing your password.": "Si esta actualización es inesperada, tome medidas inmediatas para proteger su cuenta cambiando su contraseña.",
     "If you did not create an account, no further action is required.": "Si no ha creado una cuenta, no es necesario realizar ninguna otra acción.",
     "If you did not request a password reset, no further action is required.": "Si no solicitó un restablecimiento de contraseña, no se requiere ninguna otra acción.",
@@ -33,6 +34,7 @@
     "Login Change": "Cambiar de inicio de sesión",
     "Logout": "Cerrar sesión",
     "Name": "Nombre",
+    "New Device Login": "Inicio de sesión con nuevo dispositivo",
     "New Password": "Nueva contraseña",
     "Next": "Próximo",
     "Optional": "Opcional",
@@ -63,7 +65,10 @@
     "Stopped impersonating.": "Dejó de hacerse pasar por alguien.",
     "Submit": "Entregar",
     "Success": "Tener éxito",
+    "The ip address is: :address": "La dirección IP es: :address",
+    "The login credential is: :credential": "La credencial de inicio de sesión es: :credential",
     "The primary and secondary email addresses must be different.": "Las direcciones de correo electrónico principal y secundaria deben ser diferentes.",
+    "There has just been a login to your account from a new device or ip address.": "Acaba de iniciar sesión en su cuenta desde un nuevo dispositivo o dirección IP.",
     "There have been changes to your account login.": "Se han producido cambios en el inicio de sesión de su cuenta.",
     "This action cannot be undone.": "Esta acción no se puede deshacer.",
     "This email address must be validated before a log in will succeed.": "Esta dirección de correo electrónico debe ser validada para poder iniciar sesión correctamente.",
