--- a/publish/lang/fr.json
+++ b/publish/lang/fr.json
@@ -25,6 +25,7 @@
     "French": "Français",
     "Full Name": "Nom et prénom",
     "Hello :name": "Bonjour :name",
+    "If this login is unexpected, please take immediate action to protect your account by changing your password.": "Si cette connexion est inattendue, veuillez prendre des mesures immédiates pour protéger votre compte en modifiant votre mot de passe.",
     "If this update is unexpected, please take immediate action to protect your account by changing your password.": "Si cette mise à jour est inattendue, veuillez prendre des mesures immédiates pour protéger votre compte en modifiant votre mot de passe.",
     "If you did not create an account, no further action is required.": "Si vous n'avez pas créé de compte, aucune autre action n'est requise.",
     "If you did not request a password reset, no further action is required.": "Si vous n’avez pas demandé de réinitialisation de mot de passe, aucune autre action n’est requise.",
@@ -33,6 +34,7 @@
     "Login Change": "Changement de connexion",
     "Logout": "Déconnexion",
     "Name": "Nom",
+    "New Device Login": "Connexion à un nouvel appareil",
     "New Password": "Nouveau mot de passe",
     "Next": "Suivante",
     "Optional": "Optionnel",
@@ -63,7 +65,10 @@
     "Stopped impersonating.": "J'ai arrêté de me faire passer pour.",
     "Submit": "Soumettre",
     "Success": "Succès",
+    "The ip address is: :address": "L'adresse IP est : :address",
+    "The login credential is: :credential": "Les identifiants de connexion sont : :credential",
     "The primary and secondary email addresses must be different.": "Les adresses e-mail principale et secondaire doivent être différentes.",
+    "There has just been a login to your account from a new device or ip address.": "Il vient d'y avoir une connexion à votre compte à partir d'un nouvel appareil ou d'une nouvelle adresse IP.",
     "There have been changes to your account login.": "Des modifications ont été apportées à la connexion à votre compte.",
     "This action cannot be undone.": "Cette action ne peut pas être annulée.",
     "This email address must be validated before a log in will succeed.": "Cette adresse e-mail doit être validée avant qu'une connexion réussisse.",
