--- a/publish/lang/fr.json
+++ b/publish/lang/fr.json
@@ -4,6 +4,7 @@
     "A verification link has been sent to your secondary email address.": "Un lien de vérification a été envoyé à votre adresse e-mail secondaire.",
     "An email has been sent to your address.": "Vous avez envoyé un courrier électronique à votre adresse.",
     "Are you sure you want to delete your account?": "Etes-vous sûr de vouloir supprimer votre compte ?",
+    "Are you sure you want to proceed?": "Êtes-vous sûr de vouloir continuer ?",
     "Cancel": "Annuler",
     "Click here to re-send the verification email.": "Cliquez ici pour renvoyer l'e-mail de vérification.",
     "Confirm": "Confirmez",
@@ -22,9 +23,11 @@
     "English": "Anglaise",
     "Ensure your account is using a long, random password to stay secure.": "Assurez-vous que votre compte utilise un mot de passe long et aléatoire pour rester sécurisé.",
     "Feel free to contact the support team if you have questions or require assistance.": "N'hésitez pas à contacter l'équipe d'assistance si vous avez des questions ou si vous avez besoin d'aide.",
+    "Forgot Password": "Mot de passe oublié",
     "French": "Français",
     "Full Name": "Nom et prénom",
     "Hello :name": "Bonjour :name",
+    "I agree to check the little box": "J'accepte de cocher la petite case",
     "If this login is unexpected, please take immediate action to protect your account by changing your password.": "Si cette connexion est inattendue, veuillez prendre des mesures immédiates pour protéger votre compte en modifiant votre mot de passe.",
     "If this update is unexpected, please take immediate action to protect your account by changing your password.": "Si cette mise à jour est inattendue, veuillez prendre des mesures immédiates pour protéger votre compte en modifiant votre mot de passe.",
     "If you did not create an account, no further action is required.": "Si vous n'avez pas créé de compte, aucune autre action n'est requise.",
@@ -33,6 +36,7 @@
     "Login": "Connexion",
     "Login Change": "Changement de connexion",
     "Logout": "Déconnexion",
+    "My Profile": "Mon profil",
     "Name": "Nom",
     "New Device Login": "Connexion à un nouvel appareil",
     "New Password": "Nouveau mot de passe",
@@ -46,6 +50,7 @@
     "Please log in with your primary email address and navigate to your profile to send a new verification email.": "Veuillez vous connecter avec votre adresse e-mail principale et accéder à votre profil pour envoyer un nouvel e-mail de vérification.",
     "Please provide your password to confirm you would like to permanently delete your account.": "Veuillez fournir votre mot de passe pour confirmer que vous souhaitez supprimer définitivement votre compte.",
     "Previous": "Précédente",
+    "Primary Color": "Couleur primaire",
     "Primary Email": "E-mail principal",
     "Profile": "Profil",
     "Profile Information": "Informations sur le profil",
@@ -60,11 +65,13 @@
     "Save": "Conserver",
     "Secondary Email": "E-mail secondaire",
     "Secondary Email or Username": "E-mail ou nom d'utilisateur secondaire",
+    "Secondary Verification": "Vérification secondaire",
     "Send Reset Link": "Envoyer le lien",
     "Spanish": "Espagnole",
     "Stopped impersonating.": "J'ai arrêté de me faire passer pour.",
     "Submit": "Soumettre",
     "Success": "Succès",
+    "Surface Color": "Couleur de la surface",
     "The ip address is: :address": "L'adresse IP est : :address",
     "The login credential is: :credential": "Les identifiants de connexion sont : :credential",
     "The primary and secondary email addresses must be different.": "Les adresses e-mail principale et secondaire doivent être différentes.",
@@ -84,6 +91,7 @@
     "Welcome!": "Bienvenue!",
     "Welcome to :app!": "Bienvenue sur :app!",
     "You are receiving this email because we received a password reset request for your account.": "Vous recevez cet e-mail car nous avons reçu une demande de réinitialisation de mot de passe pour votre compte.",
+    "You must agree to check the little box.": "Vous devez accepter de cocher la petite case.",
     "Your email address has been verified!": "Votre adresse email a été vérifiée !",
     "Your email address is unverified.": "Votre adresse email n'est pas vérifiée.",
     "Your secondary email address has been verified.": "Votre adresse e-mail secondaire a été vérifiée.",
