Update: Resync enraiged-core publishable assets

--- a/publish/lang/en.json
+++ b/publish/lang/en.json
@@ -2,6 +2,7 @@
     "A new verification link has been sent to your email address.": "A new verification link has been sent to your email address.",
     "A recent attempt to log in with your secondary email address has failed.": "A recent attempt to log in with your secondary email address has failed.",
     "A verification link has been sent to your secondary email address.": "A verification link has been sent to your secondary email address.",
+    "Administration": "Administration",
     "An email has been sent to your address.": "An email has been sent to your address.",
     "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
     "Are you sure you want to proceed?": "Are you sure you want to proceed?",
@@ -15,6 +16,8 @@
     "Current Password": "Current Password",
     "Dashboard": "Dashboard",
     "Delete Account": "Delete Account",
+    "Edit My Profile": "Edit My Profile",
+    "Edit Profile": "Edit Profile",
     "Email": "Email",
     "Email Address": "Email Address",
     "Email Verification": "Email Verification",
@@ -28,6 +31,8 @@
     "Full Name": "Full Name",
     "Hello :name": "Hello :name",
     "I agree to check the little box": "I agree to check the little box",
+    "I don't like it!": "I don't like it!",
+    "I like it!": "I like it!",
     "If this login is unexpected, please take immediate action to protect your account by changing your password.": "",
     "If this update is unexpected, please take immediate action to protect your account by changing your password.": "If this update is unexpected, please take immediate action to protect your account by changing your password.",
     "If you did not create an account, no further action is required.": "If you did not create an account, no further action is required.",
@@ -36,11 +41,14 @@
     "Login": "Login",
     "Login Change": "Login Change",
     "Logout": "Logout",
+    "Manage Permissions": "Manage Permissions",
+    "Manage Users": "Manage Users",
     "My Profile": "My Profile",
     "Name": "Name",
     "New Device Login": "New Device Login",
     "New Password": "New Password",
     "Next": "Next",
+    "No file chosen": "No file chosen",
     "Optional": "Optional",
     "Password": "Password",
     "Please be sure to download any data or information that you wish to retain.": "Please be sure to download any data or information that you wish to retain.",
@@ -49,6 +57,7 @@
     "Please click the button below to verify your secondary email address.": "Please click the button below to verify your secondary email address.",
     "Please log in with your primary email address and navigate to your profile to send a new verification email.": "Please log in with your primary email address and navigate to your profile to send a new verification email.",
     "Please provide your password to confirm you would like to permanently delete your account.": "Please provide your password to confirm you would like to permanently delete your account.",
+    "Preview this color": "Preview this color",
     "Previous": "Previous",
     "Primary Color": "Primary Color",
     "Primary Email": "Primary Email",
@@ -62,6 +71,7 @@
     "Reset Password": "Reset Password",
     "Reset the table": "Reset the table",
     "Required": "Required",
+    "Salutation": "Salutation",
     "Save": "Save",
     "Secondary Email": "Secondary Email",
     "Secondary Email or Username": "Secondary Email or Username",
@@ -82,8 +92,13 @@
     "This is a secure area of the application. Please confirm your password before continuing.": "This is a secure area of the application. Please confirm your password before continuing.",
     "This password reset link will expire in :count minutes.": "This password reset link will expire in :count minutes.",
     "Unauthorized": "Unauthorized",
+    "Update Avatar": "Update Avatar",
+    "Update Locale": "Update Locale",
     "Update Password": "Update Password",
+    "Update Profile": "Update Profile",
+    "Update Theme": "Update Theme",
     "Update your account's profile information and email address.": "Update your account's profile information and email address.",
+    "Upload an avatar image": "Upload an avatar image",
     "Verify Email Address": "Verify Email Address",
     "Verify Secondary Email Address": "Verify Secondary Email Address",
     "View My Dashboard": "View My Dashboard",
