--- a/publish/lang/es.json
+++ b/publish/lang/es.json
@@ -2,6 +2,7 @@
     "A new verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a su dirección de correo electrónico.",
     "A recent attempt to log in with your secondary email address has failed.": "Un intento reciente de iniciar sesión con su dirección de correo electrónico secundaria ha fallado.",
     "A verification link has been sent to your secondary email address.": "Se ha enviado un enlace de verificación a su dirección de correo electrónico secundaria.",
+    "Administration": "Administración",
     "An email has been sent to your address.": "Se ha enviado un correo electrónico a su dirección.",
     "Are you sure you want to delete your account?": "¿Estás seguro de que quieres eliminar tu cuenta?",
     "Are you sure you want to proceed?": "¿Estás seguro que deseas continuar?",
@@ -15,6 +16,8 @@
     "Current Password": "Contraseña actual",
     "Dashboard": "Panel",
     "Delete Account": "Eliminar cuenta",
+    "Edit My Profile": "Editar mi perfil",
+    "Edit Profile": "Editar perfil",
     "Email": "Correo electrónico",
     "Email Address": "Dirección de correo electrónico",
     "Email Verification": "Verificación de correo electrónico",
@@ -28,6 +31,8 @@
     "Full Name": "Nombre completo",
     "Hello :name": "Hola :name",
     "I agree to check the little box": "Acepto marcar la pequeña casilla",
+    "I don't like it!": "¡No me gusta!",
+    "I like it!": "¡Me gusta!",
     "If this login is unexpected, please take immediate action to protect your account by changing your password.": "Si este inicio de sesión es inesperado, tome medidas inmediatas para proteger su cuenta cambiando su contraseña.",
     "If this update is unexpected, please take immediate action to protect your account by changing your password.": "Si esta actualización es inesperada, tome medidas inmediatas para proteger su cuenta cambiando su contraseña.",
     "If you did not create an account, no further action is required.": "Si no ha creado una cuenta, no es necesario realizar ninguna otra acción.",
@@ -36,11 +41,14 @@
     "Login": "Acceso",
     "Login Change": "Cambiar de inicio de sesión",
     "Logout": "Cerrar sesión",
+    "Manage Permissions": "Administrar permisos",
+    "Manage Users": "Administrar usuarios",
     "My Profile": "Mi perfil",
     "Name": "Nombre",
     "New Device Login": "Inicio de sesión con nuevo dispositivo",
     "New Password": "Nueva contraseña",
     "Next": "Próximo",
+    "No file chosen": "Ningún archivo elegido",
     "Optional": "Opcional",
     "Password": "Contraseña",
     "Please be sure to download any data or information that you wish to retain.": "Asegúrese de descargar cualquier dato o información que desee conservar.",
@@ -49,6 +57,7 @@
     "Please click the button below to verify your secondary email address.": "Haga clic en el botón a continuación para verificar su dirección de correo electrónico secundaria.",
     "Please log in with your primary email address and navigate to your profile to send a new verification email.": "Inicie sesión con su dirección de correo electrónico principal y navegue a su perfil para enviar un nuevo correo electrónico de verificación.",
     "Please provide your password to confirm you would like to permanently delete your account.": "Proporcione su contraseña para confirmar que desea eliminar permanentemente su cuenta.",
+    "Preview this color": "Vista previa de este color",
     "Previous": "Previo",
     "Primary Color": "Color primario",
     "Primary Email": "Correo electrónico principal",
@@ -62,6 +71,7 @@
     "Reset Password": "Restablecer contraseña",
     "Reset the table": "Restablecer la tabla",
     "Required": "Requerido",
+    "Salutation": "Saludo",
     "Save": "Guardar",
     "Secondary Email": "Correo electrónico secundario",
     "Secondary Email or Username": "Correo electrónico secundario o nombre de usuario",
@@ -82,8 +92,13 @@
     "This is a secure area of the application. Please confirm your password before continuing.": "Esta es una zona segura de la aplicación. Confirme su contraseña antes de continuar.",
     "This password reset link will expire in :count minutes.": "Este enlace de restablecimiento de contraseña caducará en :count minutos.",
     "Unauthorized": "No autorizado",
+    "Update Avatar": "Actualizar avatar",
+    "Update Locale": "Actualizar configuración regional",
     "Update Password": "Actualizar contraseña",
+    "Update Profile": "Actualizar perfil",
+    "Update Theme": "Actualizar tema",
     "Update your account's profile information and email address.": "Actualice la información del perfil y la dirección de correo electrónico de su cuenta.",
+    "Upload an avatar image": "Subir una imagen de avatar",
     "Verify Email Address": "Verificar dirección de correo electrónico",
     "Verify Secondary Email Address": "Verificar dirección de correo electrónico secundaria",
     "View My Dashboard": "Ver mi panel",
