--- a/publish/lang/fr.json
+++ b/publish/lang/fr.json
@@ -2,6 +2,7 @@
     "A new verification link has been sent to your email address.": "Un nouveau lien de vérification a été envoyé à votre adresse e-mail.",
     "A recent attempt to log in with your secondary email address has failed.": "Une tentative récente de connexion avec votre adresse e-mail secondaire a échoué.",
     "A verification link has been sent to your secondary email address.": "Un lien de vérification a été envoyé à votre adresse e-mail secondaire.",
+    "Administration": "Administration",
     "An email has been sent to your address.": "Vous avez envoyé un courrier électronique à votre adresse.",
     "Are you sure you want to delete your account?": "Etes-vous sûr de vouloir supprimer votre compte ?",
     "Are you sure you want to proceed?": "Êtes-vous sûr de vouloir continuer ?",
@@ -15,6 +16,8 @@
     "Current Password": "Mot de passe actuel",
     "Dashboard": "Tableau de bord",
     "Delete Account": "Supprimer le compte",
+    "Edit My Profile": "Modifier mon profil",
+    "Edit Profile": "Modifier le profil",
     "Email": "E-mail",
     "Email Address": "Adresse e-mail",
     "Email Verification": "Email Verification",
@@ -28,6 +31,8 @@
     "Full Name": "Nom et prénom",
     "Hello :name": "Bonjour :name",
     "I agree to check the little box": "J'accepte de cocher la petite case",
+    "I don't like it!": "Je n'aime pas ça!",
+    "I like it!": "J'aime ça!",
     "If this login is unexpected, please take immediate action to protect your account by changing your password.": "Si cette connexion est inattendue, veuillez prendre des mesures immédiates pour protéger votre compte en modifiant votre mot de passe.",
     "If this update is unexpected, please take immediate action to protect your account by changing your password.": "Si cette mise à jour est inattendue, veuillez prendre des mesures immédiates pour protéger votre compte en modifiant votre mot de passe.",
     "If you did not create an account, no further action is required.": "Si vous n'avez pas créé de compte, aucune autre action n'est requise.",
@@ -36,11 +41,14 @@
     "Login": "Connexion",
     "Login Change": "Changement de connexion",
     "Logout": "Déconnexion",
+    "Manage Permissions": "Gérer les autorisations",
+    "Manage Users": "Gérer les utilisateurs",
     "My Profile": "Mon profil",
     "Name": "Nom",
     "New Device Login": "Connexion à un nouvel appareil",
     "New Password": "Nouveau mot de passe",
     "Next": "Suivante",
+    "No file chosen": "Aucun fichier choisi",
     "Optional": "Optionnel",
     "Password": "Mot de passe",
     "Please be sure to download any data or information that you wish to retain.": "Assurez-vous de télécharger toutes les données ou informations que vous souhaitez conserver.",
@@ -49,6 +57,7 @@
     "Please click the button below to verify your secondary email address.": "Veuillez cliquer sur le bouton ci-dessous pour vérifier votre adresse e-mail secondaire.",
     "Please log in with your primary email address and navigate to your profile to send a new verification email.": "Veuillez vous connecter avec votre adresse e-mail principale et accéder à votre profil pour envoyer un nouvel e-mail de vérification.",
     "Please provide your password to confirm you would like to permanently delete your account.": "Veuillez fournir votre mot de passe pour confirmer que vous souhaitez supprimer définitivement votre compte.",
+    "Preview this color": "Aperçu de cette couleur",
     "Previous": "Précédente",
     "Primary Color": "Couleur primaire",
     "Primary Email": "E-mail principal",
@@ -62,6 +71,7 @@
     "Reset Password": "Réinitialiser le mot de passe",
     "Reset the table": "Réinitialiser le tableau",
     "Required": "Obligatoire",
+    "Salutation": "Salutation",
     "Save": "Conserver",
     "Secondary Email": "E-mail secondaire",
     "Secondary Email or Username": "E-mail ou nom d'utilisateur secondaire",
@@ -82,8 +92,13 @@
     "This is a secure area of the application. Please confirm your password before continuing.": "Il s'agit d'une zone sécurisée de l'application. Veuillez confirmer votre mot de passe avant de continuer.",
     "This password reset link will expire in :count minutes.": "Ce lien de réinitialisation de mot de passe expirera dans :count minutes.",
     "Unauthorized": "Unauthorized",
+    "Update Avatar": "Mettre à jour l'avatar",
+    "Update Locale": "Mettre à jour les paramètres régionaux",
     "Update Password": "Mettre à jour le mot de passe",
+    "Update Profile": "Mettre à jour le profil",
+    "Update Theme": "Thème de mise à jour",
     "Update your account's profile information and email address.": "Mettez à jour les informations de profil et l'adresse e-mail de votre compte.",
+    "Upload an avatar image": "Télécharger une image d'avatar",
     "Verify Email Address": "Vérifier l'adresse e-mail",
     "Verify Secondary Email Address": "Vérifier l'adresse e-mail secondaire",
     "View My Dashboard": "Afficher mon tableau de bord",
